--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,151 @@
-.App {
-  text-align: center;
+.container-fluid {
+  background-color: #f8f9fa;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.row {
+  border: 1px solid #e3e3e3;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+  color: #333;
+  font-weight: bold;
+}
+.nav-link{
+  font-size: 16px;
+font-weight: 400;
+color: #141263;
+font-family: Arial !important;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+input[type="text"],
+select {
+  border: 2px solid #c3c3c3;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  accent-color: #141263;
+}
+
+.form-labels{
+  font-weight: 600;
+  font-size: 16px;
+  color: #3A3A3A;
+}
+
+.form-check-label {
+  margin-left: 5px;
+}
+.form-check-label{
+  font-size: 16px;
+  font-weight: 400;
+  color: #767676;
+}
+aside h5{
+  font-size: 20px;
+  font-weight: 700;
+  color: #0D0D0D;
+}
+main h5{
+  font-size: 20px;
+  font-weight: 700;
+  color: #121212;
+}
+
+.form-check-input {
+  margin-right: 5px;
+}
+
+.table {
+  background-color: white;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table-bordered {
+  border: 1px solid #dcdcdc;
+}
+
+.table-hover tbody tr:hover {
+  background-color: #f2f2f2;
+}
+.thead_first{
+  padding: 8px !important;}
+
+thead th {
+  text-align: left;
   color: white;
+  font-weight: bold;
+  padding: 8px 8px 14px 8px !important;
+}
+.navbar-nav  {
+display: flex;
+gap: 34px;
+}
+tbody td {
+  padding: 10px  !important;
+  font-size: 16px;
+  color: #3A3A3A !important;
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  color: #3C3A7E;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover {
+  text-decoration: underline;
+}
+
+.btn-primary {
+  background-color: #141263;
+  border: none;
+  font-size: 14px;
+  padding: 8px 16px;
+}
+
+.d-flex {
+  margin-top: 20px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pagination button {
+  border-radius: 5px;
+}
+
+.pagination span {
+  font-size: 14px;
+}
+th{
+  background-color: #141263 !important;
+  color: #FFFFFF !important;
+}
+.table-bordered>:not(caption)>*>* {
+  border-width: 0 !important;
+}
+thead th {
+  font-size: 14px;
+  font-weight: 400;
+}
+input[type="checkbox"] {
+  width: 24px;
+  height: 24px;
+  accent-color: #141263;
+}
+.form-check-input{
+  margin-right: 0px !important;
+  
 }
